# window-time-tracker

./: .gitignore  Cargo.toml  mydatabase.db  settings.json
src/: db_service.rs  main.rs  settings_service.rs  window_service.rs
