[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["winuser"]}
regex = {version = "1.7.3"}
tokio = {version = "1.27.0", features = ["time", "macros", "rt-multi-thread"]}
chrono = {version = "0.4.24"}
rusqlite = {version = "0.29.0", features = ["bundled"]}